--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.13.1",
     "bootstrap": "4.5.0",
+    "bootstrap-growl-ifightcrime": "^1.1.0",
+    "fastclick": "^1.0.6",
     "jquery": "3.5.1",
     "jquery.easing": "^1.4.1",
-    "fastclick": "^1.0.6",
     "nprogress": "^0.2.0"
   },
   "version": "1.0.0",
