--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap-growl-ifightcrime": "^1.1.0",
     "fastclick": "^1.0.6",
     "jquery": "3.5.1",
+    "jquery-ui": "^1.12.1",
     "jquery.easing": "^1.4.1",
     "nprogress": "^0.2.0"
   },
